@@ -7,6 +7,8 @@
 - reduced DNS cache flush time to 3 minutes
 - added `$.address` property with the absolute URL address
 - added `$.ctrl(ctrl_instance)` method
+- extended `Mail.from(email, [name])` method by adding `name` argument by [Marek Mráz](https://github.com/Mrazbb)
+- added `CONF.mail_from_name {String}` option
 
 ========================
 0.0.6
